# SPDX-FileCopyrightText: 2025 Caleb Dawson
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.5)
set(PROJECT PixenalsThreadUtils)
project(${PROJECT})
get_property(IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if (NOT IS_MULTI_CONFIG)
	message("Building for single build type")
	if (NOT CMAKE_BUILD_TYPE)
		message("No build type specified, building Release")
		set(CMAKE_BUILD_TYPE Release "" FORCE)
	endif()
endif ()
if (UNIX)
	message("Building for Unix")
	set(CMAKE_C_FLAGS "")
	if (CMAKE_BUILD_TYPE MATCHES DEBUG)
		message("Debug build")
		set(CMAKE_C_FLAGS  "-g -O0 -DEBUG -pthread -Wshadow -Wunused -Wno-unused-label -fPIC")
	endif()
	if (CMAKE_BUILD_TYPE MATCHES RELEASE)
		message("Release build")
		set(CMAKE_C_FLAGS  "-ftree-vectorize -mavx2 -finline-functions -O2 -pthread -fPIC")
	endif()
	set(PLATFORM_SRC_FILES src/unix/thread_unix.c)
endif()
if (WIN32)
	message("Building for Windows")
	message("CMAKE_MSVC_RUNTIME_LIB is " + ${CMAKE_MSVC_RUNTIME_LIBRARY})
	set(CMAKE_C_FLAGS "/TC")
	set(CMAKE_C_FLAGS_RELEASE "/O2")
	set(CMAKE_C_STANDARD 11)
	set(PLATFORM_SRC_FILES src/win/thread_win.c)
endif()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_library(${PROJECT} STATIC ${PLATFORM_SRC_FILES})
target_include_directories(${PROJECT} PRIVATE include)